--- a/.github/workflows/build-test-gradle-jar.yaml
+++ b/.github/workflows/build-test-gradle-jar.yaml
@@ -28,7 +28,7 @@ on:
       - develop
       - feature/*
     paths:
-      - ".github/workflows/build-test-gradle-jar.yml"
+      - ".github/workflows/build-test-gradle-jar.yaml"
       - "${{ inputs.application-dir }}/**"
       - "!${{ inputs.application-dir }}/README.md"
       - "!/gralde/**"
