--- a/.github/workflows/build-jar.yaml
+++ b/.github/workflows/build-jar.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
             gradle-version: ${{ env.GRADLE_VERSION }}
-            arguments: bootJar
+            arguments: bootJar --no-daemon
             build-root-directory: ${{ env.PROJECT_DIR }}
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
