--- a/.github/workflows/build-jar.yaml
+++ b/.github/workflows/build-jar.yaml
@@ -24,7 +24,7 @@ env:
 jobs:
   build-jar:
     name: Build JAR from the application
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Environment Setup
         run:  | 
