--- a/.github/workflows/build-and-publish-jar.yaml
+++ b/.github/workflows/build-and-publish-jar.yaml
@@ -1,4 +1,4 @@
-name: Build JAR
+name: Build JAR and publish Docker image
 on:
   workflow_dispatch:
     inputs:
@@ -17,16 +17,23 @@ on:
         required: true
         default: 'demo-app'
         type: string
+      skipDockerBuild:
+        description: 'Skip build of Docker Image only JAR file will be published'
+        required: true
+        default: false
+        type: boolean
 env:
   JAVA_VERSION: ${{ github.event_name == 'workflow_dispatch' && inputs.java-version || '21' }}
   GRADLE_VERSION: ${{ github.event_name == 'workflow_dispatch' && inputs.gradle-version || 'wrapper' }}
   PROJECT: ${{ github.event_name == 'workflow_dispatch' && inputs.project || 'demo-app' }}
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.event_name == 'workflow_dispatch' && inputs.project || 'demo-app' }}
 jobs:
   build-jar:
     name: Build JAR from the application
     runs-on: ubuntu-latest
     steps:
-      - name: Environment Setup
+      - name: Environment setup
         run:  | 
           echo "Java Version: $JAVA_VERSION"
           echo "Gradle Version: $GRADLE_VERSION"
@@ -38,16 +45,37 @@ jobs:
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: 'temurin'
-      - name: Build Artifact
+      - name: Build JAR
         uses: gradle/gradle-build-action@v2
         with:
             gradle-version: ${{ env.GRADLE_VERSION }}
             arguments: bootJar --no-daemon
             build-root-directory: ${{ env.PROJECT }}
-      - name: Upload Artifact
+      - name: Publish JAR as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PROJECT }}.jar
           path: ${{ env.PROJECT }}/build/libs/${{ env.PROJECT }}.jar
           if-no-files-found: error
           # retention-days: 5
+      - name: Docker login
+        if: inputs.skipDockerBuild == false
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract metadata (tags, labels) for Docker
+        if: inputs.skipDockerBuild == false
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - name: Build and push Docker image
+        if: inputs.skipDockerBuild == false
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ env.PROJECT }}
+          push: true
+          tags: jar
+          labels: ${{ steps.meta.outputs.labels }}
