--- a/.github/workflows/build-and-publish-jar.yaml
+++ b/.github/workflows/build-and-publish-jar.yaml
@@ -79,4 +79,4 @@ jobs:
           push: true
           tags: jar
           labels: ${{ steps.meta.outputs.labels }}
-          file: jar-build.Dockerfile
+          file: ${{ env.PROJECT }}/jar-build.Dockerfile
