--- a/.github/workflows/deploy-page.yaml
+++ b/.github/workflows/deploy-page.yaml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy to Github Pages
 
 on:
   push:
@@ -21,7 +21,8 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
-  deploy:
+  deploy-page:
+    name: Deploy Page
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
