Revert "Update diagram-update.yaml"
This reverts commit 2fa8a37fd0c19615a66f2bf67e6f009f88cfe1ae.

--- a/.github/workflows/diagram-update.yaml
+++ b/.github/workflows/diagram-update.yaml
@@ -13,10 +13,19 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    - name: Install PlantUML
+      run: |
+        sudo apt update
+        sudo apt install -y plantuml
     - name: Generate diagrams
-      id: plantuml
-      uses: grassedge/generate-plantuml-action@v1.5
+      run: |
+        for uml in $(find ./k6-tests/diagrams -name "*.plantuml"); do
+            plantuml $uml -tpng
+        done
+    - name: Commit changes
+      uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        message: "Render PlantUML files"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        commit_message: Update UML diagrams
+        commit_user_name: 'github-actions-uml[bot]'
+        commit_user_email: 'latusikl@latusikl.com'
+        file_pattern: '*.png'
