--- a/.github/workflows/diagram-update.yaml
+++ b/.github/workflows/diagram-update.yaml
@@ -13,19 +13,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Install PlantUML
-      run: |
-        sudo apt update
-        sudo apt install -y plantuml
-    - name: Generate diagrams
-      run: |
-        for uml in $(find ./k6-tests/diagrams -name "*.plantuml"); do
-            plantuml $uml -tpng
-        done
-    - name: Commit changes
-      uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: Update UML diagrams
-        commit_user_name: 'github-actions-uml[bot]'
-        commit_user_email: 'latusikl@latusikl.com'
-        file_pattern: '*.png'
+        fetch-depth: 1
+    - name: plantuml
+      id: plantuml
+      uses: grassedge/generate-plantuml-action@v1.5
+      with:
+        path: example
+        message: "Render PlantUML files"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
