--- a/.github/workflows/diagram-update.yaml
+++ b/.github/workflows/diagram-update.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Process diagrams
         uses: Timmy/plantuml-action@v1
         with:
-          args: 'k6-tests/diagrams/*.plantuml -tpng'
+          args: '-tpng **/k6-tests/diagrams/*.plantuml'
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
