--- a/.github/workflows/diagram-update.yaml
+++ b/.github/workflows/diagram-update.yaml
@@ -11,12 +11,17 @@ jobs:
     permissions:
       contents: write
     steps:
+    
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Process diagrams
-        uses: Timmy/plantuml-action@v1
+      - uses: actions/setup-java@v4
         with:
-          args: '-tpng **/k6-tests/diagrams/*.plantuml'
+          distribution: 'temurin'
+          java-version: '21'
+      - name: Download Plantuml
+        run: wget https://github.com/plantuml/plantuml/releases/download/v1.2024.0/plantuml-1.2024.0.jar
+      - name: Generate Diagrams
+        run: java -jar plantuml-1.2024.0.jar -v -tpng -r  **/k6-tests/diagrams/*.plantuml
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
