--- a/.github/workflows/diagram-update.yaml
+++ b/.github/workflows/diagram-update.yaml
@@ -22,6 +22,8 @@ jobs:
         run: wget https://github.com/plantuml/plantuml/releases/download/v1.2024.0/plantuml-1.2024.0.jar
       - name: Generate Diagrams
         run: java -jar plantuml-1.2024.0.jar -v -tpng -r  **/k6-tests/diagrams/*.plantuml
+      - name: Test LS
+        run: cd k6-tests/diagrams && ls
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
