--- a/demo-app/build.gradle
+++ b/demo-app/build.gradle
@@ -34,10 +34,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-    testImplementation 'org.apache.groovy:groovy-all:4.0.17'
-    testImplementation'org.spockframework:spock-core:2.3-groovy-4.0'
-    testImplementation'org.spockframework:spock-spring:2.3-groovy-4.0'
+//
+//    testImplementation 'org.apache.groovy:groovy-all:4.0.17'
+//    testImplementation'org.spockframework:spock-core:2.3-groovy-4.0'
+//    testImplementation'org.spockframework:spock-spring:2.3-groovy-4.0'
 }
 
 tasks.named('test') {
